--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "My webpack project",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack"
+        "build": "webpack --mode production",
+        "dev": "webpack --mode development",
+        "start": "webpack-dev-server --mode development --open"
     },
     "keywords": [
         "js",
@@ -15,8 +16,16 @@
     "author": "Liutyi_V",
     "license": "ISC",
     "devDependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "babel-loader": "^8.0.6",
+        "html-webpack-plugin": "^3.2.0",
         "webpack": "^4.41.6",
-        "webpack-cli": "^4.0.0-beta.2",
+        "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
+    },
+    "dependencies": {
+        "@babel/polyfill": "^7.8.3"
     }
 }
